Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z5.out
Z5.java:12:28: compiler.err.cant.extend.intf.annotation
1 error
